--- a/mods/sovra/rules/ships.yaml
+++ b/mods/sovra/rules/ships.yaml
@@ -2,6 +2,8 @@ SS:
 	Inherits: ^Submarine
 	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
 	Buildable:
+        BuildDuration: 850
+        BuildDurationModifier: 100
 		Queue: Ship
 		BuildAtProductionType: Submarine
 		BuildPaletteOrder: 40
@@ -66,6 +68,8 @@ MSUB:
 	Inherits: ^Submarine
 	Inherits@AUTOTARGET: ^AutoTargetAllAssaultMove
 	Buildable:
+        BuildDuration: 1650
+        BuildDurationModifier: 100
 		Queue: Ship
 		BuildAtProductionType: Submarine
 		BuildPaletteOrder: 60
@@ -122,6 +126,8 @@ DD:
 	Inherits: ^Ship
 	Inherits@AUTOTARGET: ^AutoTargetAllAssaultMove
 	Buildable:
+        BuildDuration: 1000
+        BuildDurationModifier: 100
 		Queue: Ship
 		BuildAtProductionType: Boat
 		BuildPaletteOrder: 40
@@ -178,6 +184,8 @@ CA:
 	Inherits: ^Ship
 	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
 	Buildable:
+        BuildDuration: 2000
+        BuildDurationModifier: 100
 		Queue: Ship
 		BuildAtProductionType: Boat
 		BuildPaletteOrder: 50
@@ -242,6 +250,8 @@ LST:
 	Inherits: ^Ship
 	Inherits@CARGOPIPS: ^CargoPips
 	Buildable:
+        BuildDuration: 700
+        BuildDurationModifier: 100
 		Queue: Ship
 		BuildPaletteOrder: 10
 		Prerequisites: ~techlevel.low
@@ -281,6 +291,8 @@ PT:
 	Inherits: ^Ship
 	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
 	Buildable:
+        BuildDuration: 500
+        BuildDurationModifier: 100
 		Queue: Ship
 		BuildAtProductionType: Boat
 		BuildPaletteOrder: 20
@@ -330,6 +342,8 @@ SEAS:
 	Inherits: ^Ship
 	Inherits@AUTOTARGET: ^AutoTargetAllAssaultMove
 	Buildable:
+        BuildDuration: 600
+        BuildDurationModifier: 100
 		Queue: Ship
 		BuildAtProductionType: Submarine
 		BuildPaletteOrder: 20
