implement wall Gates
can be toggled with V for horizontal/vertical

--- a/mods/sovra/hotkeys.yaml
+++ b/mods/sovra/hotkeys.yaml
@@ -32,3 +32,8 @@ PowerDown: X
 	Description: Power-down mode
 	Types: OrderGenerator
 	Contexts: Player
+
+ToggleVariant: V
+	Description: Rotate Building
+	Types: Production
+	Contexts: Player
