--- a/mods/sovra/rules/aircraft.yaml
+++ b/mods/sovra/rules/aircraft.yaml
@@ -298,7 +298,7 @@ HELI:
 		BuildAtProductionType: Helicopter
 		BuildPaletteOrder: 20
 		Prerequisites: ~airproduction, dome, ~aircraft.allies, ~techlevel.medium
-		Description: Helicopter gunship armed\nwith multi-purpose missiles.\n\n  Strong vs Buildings, Vehicles, Aircraft\n  Weak vs Infantry
+		Description: Helicopter gunship armed\nwith multi-purpose missiles.\nCan detect submarines.\n\n  Strong vs Buildings, Vehicles, Aircraft\n  Weak vs Infantry
 	Valued:
 		Cost: 1400
 	Tooltip:
@@ -372,6 +372,10 @@ HELI:
 	WithProductionIconOverlay:
 		Types: Veterancy
 		Prerequisites: aircraft.upgraded
+	DetectCloaked:
+		Range: 3c768
+		DetectionTypes: Underwater
+    RenderDetectionCircle:
 
 HIND:
 	Inherits: ^Helicopter
