Tanks get slowed on Infantry crush.
Tanks crushing Infantry get momentarily slowed down.
primarily this should make it harder to plow rows of infantry using columns of Light Tanks.

--- a/mods/sovra/rules/defaults.yaml
+++ b/mods/sovra/rules/defaults.yaml
@@ -322,6 +322,11 @@
 	Inherits: ^Vehicle
 	Mobile:
 		Locomotor: tracked
+	ExternalCondition@CRUSHSLOW:
+		Condition: crush-slow
+	SpeedMultiplier@CRUSHSLOW:
+		RequiresCondition: crush-slow
+		Modifier: 70
 
 ^Infantry:
 	Inherits@1: ^ExistsInWorld
@@ -448,6 +453,9 @@
 	DetectCloaked:
 		DetectionTypes: Cloak
 		Range: 1c512
+	GrantExternalConditionToCrusher@CRUSHSLOW:
+		OnCrushCondition: crush-slow
+		OnCrushDuration: 50
 
 ^Soldier:
 	Inherits: ^Infantry
